History of Asubst:

14/12/2005 V2_4
CHANGE: Replace \IJ by \RIJ in replace pattern for "string matching pattern"
        substitution.
Add: \rIJ in replace pattern fo substring of matching string substitution.

09/12/2005 V2_3
Add: Support for \s (for space) in both patterns.

07/12/2005 V2_2
Bugfix: \x0A in search pattern was not parsed as line delimiter.
Bugfix: One not multiple regex ("\n" of "^..." or "...$") was badly handled.

05/12/2005 V2_1
Add: Support for \t and \xIJ in search pattern.

04/12/2005 V2_0
Add: Support for \IJ and \xIJ in replace pattern.

02/12/2005 (V1.2)
First version passing basic tests.

30/11/2005 Init
Initial version.