@@ -1,19 +1,23 @@
 # Test scenario for asubst
-# Input                 Search      Replace                   Replace
-"toto"                  "t"         "x"                       "xoxo"
-"toto"                  "o$"        "x"                       "totx"
-"toto"                  "^t"        "x"                       "xoto"
-"toto"                  "t"         "ti"                      "tiotio"
-"tito"                  "t."        "tu"                      "tutu"
-"botitobi"              "t."        "au"                      "boauaubi"
-"toto"                  "t"         "\x40"                    "@o@o"
-"tito"                  "t."        ">\R00<"                  ">ti<>to<"
-"tito"                  "(.i)(.o)"  "\r12<->\r11"             "to<->ti"
-"toto\ntoto"            "\x0A"      ""                        "totototo"
-"toto\ntoto\n"          "toto\n"    ""                        ""
-"toto\ntiti"            "\n"        ""                        "tototiti"
-"toto titi"             "\s"        "\t"                      "toto	titi"
-"toto\ttiti"            "\t"        "\s"                      "toto titi"
-"toto\ntiti\ntata\n"    ".*\n"      "\R01"                    "tototititata"
-"\ntoto\ntiti\ntata"    "\n.*"      "\R02"                    "tototititata"
+# Input                 Search           Replace                 Replace
+"toto"                  "t"              "x"                     "xoxo"
+"toto"                  "o$"             "x"                     "totx"
+"toto"                  "^t"             "x"                     "xoto"
+"toto"                  "t"              "ti"                    "tiotio"
+"tito"                  "t."             "tu"                    "tutu"
+"botitobi"              "t."             "au"                    "boauaubi"
+"toto"                  "t"              "\x40"                  "@o@o"
+"tito"                  "t."             ">\R00<"                ">ti<>to<"
+"tito"                  "(.i)(.o)"       "\r12<->\r11"           "to<->ti"
+"tito"                  ".*"             "\m\R01"                "Tito"
+"TIto"                  "(.I)(.o)"       "\u\r12\l\r11\c"        "TOti"
+"toto"                  "(.)(.)(..)"     "\u\r12\c\r11\r13"      "Otto"
+"--  test"              "(-- *)(.*)"     "\r11\m\r12"            "--  Test"
+"toto\ntoto"            "\x0A"           ""                      "totototo"
+"toto\ntoto\n"          "toto\n"         ""                      ""
+"toto\ntiti"            "\n"             ""                      "tototiti"
+"toto titi"             "\s"             "\t"                    "toto	titi"
+"toto\ttiti"            "\t"             "\s"                    "toto titi"
+"toto\ntiti\ntata\n"    ".*\n"           "\R01"                  "tototititata"
+"\ntoto\ntiti\ntata"    "\n.*"           "\R02"                  "tototititata"
 
