@@ -1,6 +1,6 @@
 with Ada.Strings.Unbounded, Ada.Characters.Latin_1, Ada.Exceptions;
 with Argument, Sys_Calls, String_Mng, Text_Line, Unique_List, Debug,
-     Char_To_Hexa, Regular_Expressions;
+     Char_To_Hexa, Regular_Expressions, Upper_Str, Lower_Str, Mixed_Str;
 with Search_Pattern;
 package body Replace_Pattern is
 
@@ -9,8 +9,8 @@ package body Replace_Pattern is
   -- The pattern to replace
   The_Pattern : Asu.Unbounded_String;
 
-  -- The character in the pattern that code "\IJ (-> matching (sub)string)
-  Match_Char : constant Character := Ada.Characters.Latin_1.Bs;
+  -- The character in the pattern that code a substitution
+  Subst_Char : constant Character := Ada.Characters.Latin_1.Bs;
 
   -- The line feed string
   Line_Feed : constant String  :=Text_Line.Line_Feed & "";
@@ -19,32 +19,39 @@ package body Replace_Pattern is
   subtype Byte is Natural range 0 .. 255;
 
   -- Record describing an action to perform during substitution
-  type Subtit_Action_List is (Replace_Match_Regex,
-                              Replace_Match_Substring);
-  -- @@@ will add UPPER_CASE, lower_case and Mixed_Case conversions
+  -- Replace by string matching a regex (Info)
+  -- Replace by substring No (Info rem 16) of string matching No (Info / 16)
+  -- Start/stop upper/lower/mixed case conversion
+  type Subtit_Action_List is (
+       Replace_Match_Regex, Replace_Match_Substring,
+       Start_Uppercase, Start_Lowercase, Start_Mixedcase, Stop_Case);
   -- The chars in The_Pattern qualifying the action
-  type Match_Action_Rec is record
+  type Substit_Action_Rec is record
     -- Index in the pattern
     Index : Positive;
     Action : Subtit_Action_List;
     Info : Byte;
   end record;
-  procedure Set (To : out Match_Action_Rec; Val : in Match_Action_Rec) is
+  procedure Set (To : out Substit_Action_Rec; Val : in Substit_Action_Rec) is
   begin
     To := Val;
   end Set;
   -- Access by index in The_Pattern
-  function Image (Element : Match_Action_Rec) return String is
+  function Image (Element : Substit_Action_Rec) return String is
   begin
     return Element.Index'Img;
   end Image;
-  function "=" (Current : Match_Action_Rec; Criteria : Match_Action_Rec)
+  function "=" (Current : Substit_Action_Rec; Criteria : Substit_Action_Rec)
                return Boolean is
   begin
     return Current.Index = Criteria.Index;
   end "=";
-  package Matches_List is new Unique_List (Match_Action_Rec, Set, Image);
-  Matches : Matches_List.List_Type;
+  package Substites_List is new Unique_List (Substit_Action_Rec, Set, Image);
+  Substites : Substites_List.List_Type;
+
+  -- What is current case substitution mode
+  subtype Case_Mode_List is Subtit_Action_List
+            range Start_Uppercase .. Stop_Case;
 
   -- Reports a parsing error
   procedure Error (Msg : in String) is
@@ -90,13 +97,37 @@ package body Replace_Pattern is
     return Result;
   end Get_Hexa;
 
+  -- Check and activates a Case switch
+  procedure Switch_Case (Subst : in Substit_Action_Rec;
+                         Case_Action : in out Case_Mode_List) is
+  begin
+    -- Check that the requested mode (in action) is not current
+    if Subst.Action = Case_Action then
+      Error ("Invalid " & Mixed_Str (Subst.Action'Img)
+           & " while already in this case conversion");
+    end if;
+    -- Activate
+    Substites_List.Insert (Substites, Subst);
+    Asu.Replace_Slice (The_Pattern,
+                       Subst.Index, Subst.Index + 1,
+                       Subst_Char & "");
+    Case_Action := Subst.Action;
+  end Switch_Case;
+
   -- Parse the replace pattern
   procedure Parse (Pattern : in String) is
+    -- Start index when looking for next \
     Start : Positive;
+    -- Got \ index
     Got : Natural;
+    -- The char after \
     Esc_Char : Character;
-    Match : Match_Action_Rec;
+    -- The Substit_Action_Rec to store
+    Subst : Substit_Action_Rec;
+    -- IJ hexa value
     Hexa_Byte : Byte;
+    -- Current case action
+    Case_Action : Case_Mode_List;
 
   begin
     if Debug.Set then
@@ -106,10 +137,11 @@ package body Replace_Pattern is
     The_Pattern := Asu.To_Unbounded_String (Pattern);
     -- Replace escape sequences by coding chars
     Start := 1;
+    Case_Action := Stop_Case;
     loop
       -- Locate an escape sequence, exit when no more
       Got := String_Mng.Locate_Escape (Asu.To_String (The_Pattern),
-                                       Start, "\nRrstx");
+                                       Start, "\clmnRrstux");
       exit when Got = 0;
       -- Set corresponding code
       Esc_Char := Asu.Element (The_Pattern, Got);
@@ -118,13 +150,35 @@ package body Replace_Pattern is
       end if;
       -- In all case of replacement of \... by a char:
       Start := Got;
+      Subst.Index := Got - 1;
+      Subst.Info := 0;
       case Esc_Char is
         when '\' =>
           -- "\\" replaced by '\'
           Asu.Replace_Slice (The_Pattern, Got - 1, Got, "\");
+        when 'c' =>
+          -- "\c" XXX case switch off
+          Subst.Action := Stop_Case;
+          Switch_Case (Subst, Case_Action);
+        when 'l' =>
+          -- "\l" lower_case switch on
+          Subst.Action := Start_Lowercase;
+          Switch_Case (Subst, Case_Action);
+        when 'm' =>
+          -- "\m" Mixed_Case switch on
+          Subst.Action := Start_Mixedcase;
+          Switch_Case (Subst, Case_Action);
         when 'n' =>
           -- "\n" replaced by Line_Feed
-          Asu.Replace_Slice (The_Pattern, Got - 1, Got, Line_Feed);
+          if Case_Action /= Stop_Case then
+            -- Case substitution stops with the line, add subst marker
+            Case_Action := Stop_Case;
+            Subst.Action := Stop_Case;
+            Substites_List.Insert (Substites, Subst);
+            Asu.Replace_Slice (The_Pattern, Got - 1, Got, Subst_Char & Line_Feed);
+          else
+            Asu.Replace_Slice (The_Pattern, Got - 1, Got, Line_Feed);
+          end if;
         when 's' =>
           -- "\s" replaced by Space
           Asu.Replace_Slice (The_Pattern, Got - 1, Got, " ");
@@ -132,6 +186,10 @@ package body Replace_Pattern is
           -- "\t" replaced by (horiz) tab
           Asu.Replace_Slice (The_Pattern, Got - 1, Got,
                              Ada.Characters.Latin_1.Ht & "");
+        when 'u' =>
+          -- "\u" UPPER_CASE switch on
+          Subst.Action := Start_Uppercase;
+          Switch_Case (Subst, Case_Action);
         when 'x' =>
           -- "\xIJ" hexa replaced by byte
           Hexa_Byte := Get_Hexa (Got + 1);
@@ -141,45 +199,38 @@ package body Replace_Pattern is
           -- "\RIJ" or \rIJ, IJ in hexa, replaced by matching (sub) string
           -- Check IJ is a valid byte in hexa
           Hexa_Byte := Get_Hexa (Got + 1);
-          Match.Index := Got - 1;
-          Match.Info := Hexa_Byte;
+          Subst.Info := Hexa_Byte;
           if Esc_Char = 'R' then
             -- Replace by regex index IJ, check IJ
             if Hexa_Byte > Search_Pattern.Number then
-              Sys_Calls.Put_Line_Error (
-                "Invalid (too high) regex index "
+              Error ( "Invalid (too high) regex index "
                 & Asu.Slice (The_Pattern, Got + 1, Got + 2)
                 & " in replace pattern");
-              raise Parse_Error;
             end if;
-            Match.Action := Replace_Match_Regex;
+            Subst.Action := Replace_Match_Regex;
           else
             -- Replace by regex I substring J
             -- Check I
             if Hexa_Byte / 16#10# = 0
             or else Hexa_Byte / 16#10# > Search_Pattern.Number then
-              Sys_Calls.Put_Line_Error (
-                "Invalid (null or too high) regex index "
+              Error ( "Invalid (null or too high) regex index "
                 & Asu.Element (The_Pattern, Got + 1)
                 & " in replace pattern");
-              raise Parse_Error;
             end if;
             -- Check J
             if Hexa_Byte rem 16#10#
                > Search_Pattern.Nb_Substrings (Hexa_Byte / 16#10#) then
-              Sys_Calls.Put_Line_Error (
-                "Invalid (too high) substr index "
+              Error ("Invalid (too high) substr index "
                 & Asu.Element (The_Pattern, Got + 2)
                 & " of regex index " & Asu.Element (The_Pattern, Got + 1)
                 & " in replace pattern");
-              raise Parse_Error;
             end if;
-            Match.Action := Replace_Match_Substring;
+            Subst.Action := Replace_Match_Substring;
           end if;
           -- Store that, at this index, there is a (sub) string match
-          Matches_List.Insert (Matches, Match);
+          Substites_List.Insert (Substites, Subst);
           Asu.Replace_Slice (The_Pattern, Got - 1, Got + 2,
-                             Match_Char & "");
+                             Subst_Char & "");
         when others =>
           -- Impossible. Leave sequence as it is, skip it
           Start := Got + 1;
@@ -187,6 +238,14 @@ package body Replace_Pattern is
       -- Also done if end of pattern
       exit when Start >= Asu.Length (The_Pattern);
     end loop;
+    -- Stop case substitution at end of line, add subst marker
+    if Case_Action /= Stop_Case then
+      Subst.Index := Asu.Length (The_Pattern) + 1;
+      Subst.Action := Stop_Case;
+      Subst.Info := 0;
+      Substites_List.Insert (Substites, Subst);
+      Asu.Append (The_Pattern, Subst_Char & "");
+    end if;
     if Debug.Set then
       Sys_Calls.Put_Line_Error ("Replace stored pattern >"
                                & Asu.To_String (The_Pattern) & "<");
@@ -305,57 +364,128 @@ package body Replace_Pattern is
       raise Replace_Error;
   end Matchstring;
 
+  -- Apply XXX case conversion to Str(Start .. Stop)
+  -- Return the converted Str(Start .; Stop)
+  function Casestring (Str : String;
+                       Action : Case_Mode_List) return String is
+  begin
+    case Action is
+      when Start_Uppercase =>
+        return Upper_Str (Str);
+      when Start_Lowercase =>
+        return Lower_Str (Str);
+      when Start_Mixedcase =>
+        return Mixed_Str (Str);
+      when Stop_Case =>
+       return Str;
+    end case;
+  end Casestring;
+      
   -- Replace the input string by the replace pattern
   -- Input string is used to substitute \rIJ and \RIJ in pattern
   function Replace (Str : String) return String is
     Result : Asu.Unbounded_String;
     -- Current index in result
     Start : Positive;
-    -- Index of next Match_Char in result
+    -- Index of next Subst_Char in result
     Got : Natural;
-    -- Offset between result and Matches list due to previous substitutions:
-    --  Substitution replaces "Got" Match_Char character of Result
-    --  by Sub_Str, so potential next Match_Char in Result
-    --  will not match any more the index stored in Matches
-    Offset : Natural;
-    -- Matching item
-    Match : Match_Action_Rec;
+    -- Offset between result and Substites list due to previous substitutions:
+    --  Substitution replaces "Got" Subst_Char character of Result
+    --  by Sub_Str, or removes it. So potential next Subst_Char in Result
+    --  will not match any more the index stored in Substites
+    Offset : Integer;
+    -- Substitution action item
+    Valid_Subst : Boolean;
+    Subst : Substit_Action_Rec;
+    -- Case substitution start index (0 if none) and mode (Stop if none)
+    Case_Index : Natural;
+    Case_Mode : Case_Mode_List;
   begin
     -- Init result with replace pattern
     Result := The_Pattern;
-    -- Replace all occurences of replace code
+    -- Replace all occurences of replace code, toggle case substitution...
     Start := 1;
     Offset := 0;
+    Case_Index := 0;
+    Case_Mode := Stop_Case;
     loop
       -- Locate replace code
       Got := String_Mng.Locate (Asu.To_String (Result),
-                                Start, Match_Char & "");
+                                Start, Subst_Char & "");
       exit when Got = 0;
-      -- Check and get substring index
-      Try_Match:
+      -- Check that this is a match action record
+      Try_Subst:
       begin
-        Match.Index := Got - Offset;
-        Matches_List.Read (Matches, Match, Match);
-        -- Replace by sub Str pattern
-        declare
-         -- Get full or partial substring
-          Sub_Str : constant String
-                  := Matchstring (Str, Match.Action, Match.Info);
-        begin
-          if Debug.Set then
-            Sys_Calls.Put_Line_Error ("Replace, got match string >"
-                                    & Sub_Str & "<");
-          end if;
-          Asu.Replace_Slice (Result, Got, Got, Sub_Str);
-          -- Restart locate from first char after replacement
-          Start := Got + Sub_Str'Length;
-          Offset := Offset + Sub_Str'Length - 1;
-        end;
+        Subst.Index := Got - Offset;
+        Substites_List.Read (Substites, Subst, Subst);
+        Valid_Subst := True;
       exception
-        when Matches_List.Not_In_List =>
-          -- This Match_Char is a normal char
-          Start := Got + 1;
-      end Try_Match;
+        when Substites_List.Not_In_List =>
+          -- This Subst_Char is a normal char
+          Valid_Subst := False;
+      end Try_Subst;
+      -- Process match action
+      if Valid_Subst then
+        case Subst.Action is
+          when Replace_Match_Regex | Replace_Match_Substring =>
+            -- Replace by (sub) Str matching regex
+            declare
+             -- Get full or partial substring
+              Sub_Str : constant String
+                      := Matchstring (Str, Subst.Action, Subst.Info);
+            begin
+              if Debug.Set then
+                Sys_Calls.Put_Line_Error ("Replace, got match string >"
+                                        & Sub_Str & "<");
+              end if;
+              Asu.Replace_Slice (Result, Got, Got, Sub_Str);
+              -- Restart locate from first char after replacement
+              Start := Got + Sub_Str'Length;
+              Offset := Offset + Sub_Str'Length - 1;
+            end;
+          when Start_Uppercase | Start_Lowercase
+             | Start_Mixedcase | Stop_Case =>
+            if Case_Index /= 0 then
+              -- End of a casing: apply
+              if Debug.Set then
+                Sys_Calls.Put_Line_Error ("Replace, converting >"
+                       & Asu.Slice (Result, Case_Index, Got - 1) & "< to "
+                       & Mixed_Str(Case_Mode'Img));
+              end if;
+              -- New or stop casing: replace from Start to Subst_Char
+              declare
+                Case_Str : constant String
+                         := Casestring (Asu.Slice (Result, Case_Index, Got - 1),
+                                        Case_Mode);
+              begin
+                Asu.Replace_Slice (Result, Case_Index, Got, Case_Str);
+              end;
+            else
+              -- No casing active: remove subst tag
+              Asu.Replace_Slice (Result, Got, Got, "");
+            end if;
+            if Subst.Action = Stop_Case then
+              -- Stop casing
+              Case_Index := 0;
+              Case_Mode := Stop_Case;
+            else
+              -- New case
+              Case_Index := Got;
+              Case_Mode := Subst.Action;
+            end if;
+            if Debug.Set then
+              Sys_Calls.Put_Line_Error ("Replace, marking start case at"
+                       & Case_Index'Img
+                       & " with " & Subst.Action'Img);
+            end if;
+            -- Restart locate from first char after case switch
+            Start := Got;
+            Offset := Offset - 1;
+        end case;
+      else
+        -- This Subst_Char is, in fact, not a subst action
+        Start := Got + 1;
+      end if;
     end loop;
     if Debug.Set then
       Sys_Calls.Put_Line_Error ("Replace, replaced >" & Str
